# bootcamp-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.axum_web  README.md  _typos.toml  cliff.toml  docker-compose.axum.yml  test.rest  tmp.b64
axum_web/: .dockerignore  .env  CLAUDE.md  CONFIG_FORMATS.md  CONFIG_FORMAT_TESTS.md  Cargo.toml  DATABASE_SCHEMA.md  DATABASE_SETUP.md  DOCKER.md  DOCKER_SUMMARY.md  Dockerfile  LOGGING_REFACTOR.md  SCRIPT_COMPARISON.md  SERVER_LOGGING_OPTIMIZATION.md  TEST_SCRIPT_COMPARISON.md  application.toml  application.yaml  claude_skills.md  docker-compose.yml  docker.build.sh  note.md  pg_build_docker.sh  pg_launch.docker.sh  pg_run_docker.sh  pg_seed_init.py  pg_seed_init.sh  schema.sql  test_server_startup.py  test_server_startup.sh
axum_web/src/: lib.rs  logger.rs  main.rs
axum_web/src/config/: database.rs  mod.rs  server.rs
axum_web/src/database/: database.rs  mod.rs  sea_orm.rs
axum_web/src/database/entity/: sys_user.rs
axum_web/src/database/sea_orm/: database_connection.rs  database_options.rs  database_version.rs  mod.rs
axum_web/src/entity/: sys_user.rs
axum_web/src/server/: listener.rs  mod.rs
axum_web/src/server/router_handle/: mod.rs
axum_web/tests/: test_config_formats.rs
books/: Cargo.toml  note.md
books/examples/: book_algorithm.rs  book_language.rs  cereals.rs  lesson_lxqx07.rs  lesson_lxqx10.rs
books/src/: lib.rs
bootcamp/: Cargo.toml
bootcamp/src/: main.rs
charapp/: package.json  pnpm-lock.yaml
charapp/src-tauri/: Cargo.toml  tauri.conf.json
crates/async_book/: Cargo.toml
crates/claps/: Cargo.toml
crates/claps/src/: lib.rs  major.rs
crates/claps/src/base64_crate/: major.rs
crates/claps/src/csv_convert/: cli_command.rs  utils.rs
crates/claps/src/gen_pass/: gen_pass_command.rs  major.rs  mod.rs
crates/datastruct/: Cargo.toml
crates/macrokata/: Cargo.toml
crates/rustLangBook/: Cargo.toml
examples/: action_01.rs  eco_err.rs  matrix.rs  meta_myprint.rs  meta_mytry.rs  meta_myvec.rs
examples/actions/: action_01.rs  main.rs
legacy/: Cargo.toml
legacy/crates/async_book/examples/: e1_3.rs
legacy/crates/async_book/src/: main.rs
legacy/crates/claps/assets/: juventus.yaml  test.rest
legacy/crates/claps/src/base64_text/: mod.rs
legacy/crates/claps/src/csv_convert/: cli_command.rs  output_format.rs  utils.rs
legacy/crates/claps/src/gen_pass/: gen_pass_command.rs
legacy/crates/claps/src/text_encrypt/: text_encrypt_command.rs
legacy/crates/commons/: Cargo.toml
legacy/crates/concurrent/: Cargo.toml
legacy/crates/concurrent/src/: lib.rs
legacy/crates/datastruct/: Cargo.toml
legacy/crates/datastruct/examples/: stack.rs
legacy/crates/datastruct/src/: lib.rs
legacy/crates/rustLangBook/src/: lib.rs
legacy/examples/: spawn_thread.rs  thread1.rs
legacy/examples/actions/: action_01.rs  main.rs
legacy/src/: lib.rs  main.rs
legacy/src/section01/clap_cli/: major.rs
legacy/src/section01/clap_cli/http_serve/: serve.rs
legacy/src/section02/concurrent/: matrix.rs  matrix_concurrent.rs
note/: 第一周.md  第一章课程.md
scripts/: start.sh
section01/: Cargo.legacy.toml  Cargo.toml  Note.md  launch.csv.sh  launch.sh
section01/assets/: juventus.json
section01/examples/: cereals.rs  csv.rs
section01/src/: lib.rs  main.rs  utils.rs
section01/src/clap_client/: main_clap_client.rs  mod.rs  traits.rs  utils.rs
section01/src/clap_client/_01_csv_convert/: cli_command.rs  csv_command.rs  data.rs  mod.rs  output_format.rs  utils.rs
section01/src/clap_client/clienting/: base64.rs  csv.rs  genpass.rs  mod.rs  text_encrypt.rs
section01/src/clap_client/http_serve/: major.rs  serve.rs  utils.rs
section01/src/clap_client/processing/: csv.rs  genpass.rs  mod.rs  text_encrypt.rs
section01/src/clap_client/text_encrypt/: utils.rs
section01/src/cli/: mod.rs
section01/src/legacy/: mod.rs
section01/src/legacy/clap_client/: client.rs
section01/src/legacy/clap_client/_01_csv_convert/: csv_command.rs  error.rs  mod.rs  utils.rs
section01/src/legacy/clap_client/_02_gen_pass/: gpass_command.rs  mod.rs
section01/src/legacy/clap_client/http_serve/: mod.rs
section01/src/legacy/clap_client/text_encrypt/: mod.rs
section01/src/legacy_cli/: csv.rs  mod.rs
section01/src/process/: mod.rs
section01/src/utils/: mod.rs
section01/src_legacy/: lib.rs  main.rs
section01/src_legacy/clap_client/: mod.rs
section01/src_legacy/clap_client/_01_csv_convert/: csv_process.rs  data.rs
section01/src_legacy/clap_client/_02_gen_pass/: gpass_process.rs
section01/src_legacy/clap_client/base64_text/: base64_command.rs
section02/: Cargo.toml  launch.sh  note.md
section02/examples/: _01_spawn.rs  ametrics.rs  thread1.backup.rs  thread1.rs
section02/src/: lib.rs  main.rs  matrix.rs  vector.rs
section02/src/metrics/: amap.rs  cmap.rs  mod.rs
section03/: Cargo.toml  note.md
section03/examples/: my_ready.rs  my_try.rs  my_vec.rs
section03/src/: auto_debug.rs  auto_deref.rs  lib.rs  my_ready.rs  my_vec.rs  proc_macro2.rs
section04/: Cargo.toml  note.md
section04/examples/: errors.rs  errors_anyhow.rs  errors_enum.rs  errors_std.rs  errors_thiserror.rs  tokio_mpsc.rs  tokio_thread.rs
section05/: .env  Cargo.toml  README.md  chat.yaml
section05/migrations/: initial.sql
section05/src/: error.rs  lib.rs  main.rs
section05/src/app_state/: app_state.rs
section05/src/chat_core/: mod.rs
section05/src/chat_server/: error.rs  mod.rs
section05/src/chat_server/app_state/: app_state.rs
section05/src/chat_server/config/: mod.rs
section05/src/chat_server/handlers/: auth.rs  chat.rs  gen_router.rs  handlers.rs  mod.rs  workspace.rs
section05/src/chat_server/modules/: mod.rs  user.rs
section05/src/config/: config.rs  mod.rs
section05/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs
section10/: Cargo.toml
section10/src/: main.rs
src/: fg.rs  lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/__legacy__/: lib.rs  main.rs  utils.rs
src/cli/: csv.rs  (+7 more)
toolbox/: Cargo.toml
toolbox/src/: demo.rs  format.rs  lib.rs  main.rs
(+129 files in other folders)
