[workspace]

resolver = "2"
members = [
    "bootcamp",
    "toolbox",
    "axum_web", 
    "section01",
    "section10",
    "section05",
    "section02",
]
default-members = ["section02"]
exclude = ["charapp"]

[workspace.dependencies]
rand = "0.9.2"
clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.143"
csv = "1.3.1"
zxcvbn = "3.1.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
axum = { version = "0.7.4", features = ["http2", "query", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
enum_dispatch = "0.3.12"
blake3 = "1.8.2"
base64 = "0.22.0"
dashmap = "6.1.0"