[package]
name = "axum_web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
config = { version = "0.15.19", features = ["toml", "json5", "yaml"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
sea-orm = { version = "1.1.19", features = ["with-chrono", "debug-print", "sqlx-sqlite", "macros", "sqlx-postgres", "runtime-actix-native-tls"] }
num_cpus = "1.17.0"
