[package]
name = "axum_web"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
config = { version = "0.15.19", features = ["toml", "json5", "yaml"] }
serde_json = "1.0"
sea-orm = { version = "1.1.19", features = ["with-chrono", "debug-print", "sqlx-sqlite", "macros", "sqlx-postgres", "runtime-actix-native-tls"] }
num_cpus = "1.17.0"
rand = "0.9.2"
anyhow = { version = "1.0.99", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
axum = { version = "0.7.4", features = ["http2", "query", "tracing", "macros"] }
tracing = { version =  "0.1.40", features = ["async-await"] } # 发出日志事件(抽象)
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] } # 订阅接受事件处理
tracing-appender = "0.2.3" # 日志文件写入
blake3 = "1.8.2"
dashmap = "6.1.0"
dotenv = "0.15.0"