# [dependencies]
# axum = { version = "0.7.4", features = ["http2", "query", "tracing"] }
# blake3 = "1.5.1"
# cargo-edit = "0.13.0" # 用于管理依赖
# chrono = "0.4.38"
# ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
# tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
# tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package]
name = "ddd"
default-run = "ddd"

[workspace]
members = ["toolbox", "legacy/crates/*"]
exclude = ["../.dummys"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
default-run = "hello"

authors = ["@hejj"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.114"
anyhow = "1.0.95"
dotenv = "0.15.0"
csv = "1.3.0"
serde_yaml = "0.9.33"
rand = "0.8.5"
base64 = "0.22.0"
zxcvbn = "2.2.2"
futures = "0.3.31"