[package]
name = "section01"
version = "0.1.0"
edition = "2024"

[dependencies]
toolbox = { path = "../toolbox" }
rand = { workspace = true }
# feature = deliver 允许宏特性
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true}
csv = { workspace = true }
zxcvbn = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }