[package]
name = "section01"
version = "0.1.0"
edition = "2024"

[dependencies]
# toolbox = { path = "../toolbox" }
# rand = { workspace = true }
# clap = { workspace = true }
# anyhow = { workspace = true }
# serde = { workspace = true }
# serde_yaml = { workspace = true }
# serde_json = { workspace = true}
# csv = { workspace = true }
# zxcvbn = { workspace = true }
# tokio = { workspace = true }
# axum = { workspace = true }
# tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
# enum_dispatch = { workspace = true }

anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["http2", "query", "tracing"] }
base64 = "0.22.0"
blake3 = "1.5.1"
clap = { version = "=4.5.3", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.12"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "2.2.2"