[package]
name = "section02"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
oneshot = "0.1.6" # workspace
rand = { workspace = true } # 0.9.2 / 0.8.5
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }