[package]
name = "section03"
version = "0.1.0"
edition = "2024"

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.57", features = ["extra-traits"] }

[dev-dependencies]
anyhow = "1.0.81"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }