[package]
name = "section04"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
snafu = "0.8.9"
https = "2.4.0"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.8.5", features = ["http2", "query", "tracing"] }
strum = { version = "0.27.2", features = ["derive"] }
