[package]
name = "section05"
version = "0.1.0"
edition = "2024"

# workspace不能二层嵌套, 用mod替换

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["http2", "multipart", "query", "tracing"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "tls-rustls"] }
thiserror = "2.0.16"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = "0.12.9"
chrono = { version = "0.4.38", features = ["serde"] }
