[package]
name = "toolbox"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
claps = { path = "../crates/claps" }
async_book = { path = "../crates/async_book" }
anyhow = { workspace = true }
serde = { workspace = true }
dotenv = { workspace = true }