[package]
name = "claps"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }
csv = { workspace = true }
serde_yaml = { workspace = true }
